--- a/UT2004EnvironmentManual/src/main/resources/.gitignore
+++ b/UT2004EnvironmentManual/src/main/resources/.gitignore
@@ -2,3 +2,6 @@
 /UT2004 Environment Manual.log
 /UT2004 Environment Manual.pdf
 /UT2004 Environment Manual.synctex.gz
+/UT Environment Manual.synctex.gz
+/UT Environment Manual.aux
+/UT Environment Manual.log
