--- a/UT2004EnvironmentDependencies/pom.xml
+++ b/UT2004EnvironmentDependencies/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>nl.tudelft.goal</groupId>
 	<artifactId>goal-ut2004-environment-dependencies</artifactId>
-	<version>3.5.4</version>
+	<version>3.5.5-SNAPSHOT</version>
 	<name>UT2004EnvironmentDependencies</name>
 	<description>Dependencies for the UT2004 environment</description>
 	<url>https://github.com/eishub/UT3</url>
