--- a/UT3Environment/pom.xml
+++ b/UT3Environment/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>nl.tudelft.goal</groupId>
 	<artifactId>goal-ut3-environment</artifactId>
 	<name>goal-ut3-environment</name>
-	<version>3.5.5</version>
+	<version>3.5.6-SNAPSHOT</version>
 	<url>https://github.com/eishub/UT3</url>
 	<licenses>
 		<license>
