--- a/UTVisualizerConnection/pom.xml
+++ b/UTVisualizerConnection/pom.xml
@@ -8,7 +8,7 @@
 	<artifactId>goal-ut-visualizer-connection</artifactId>
 	<name>UTVisualizerConnection</name>
 	<description>A connection for the Visualizer to the Unreal Environment.</description>
-	<version>3.5.5</version>
+	<version>3.5.6-SNAPSHOT</version>
 	<url>https://github.com/eishub/UT3</url>
 	<licenses>
 		<license>
