--- a/EmohawkEnvironment/pom.xml
+++ b/EmohawkEnvironment/pom.xml
@@ -55,7 +55,7 @@
 		<dependency>
 			<groupId>nl.tudelft.goal</groupId>
 			<artifactId>goal-base-unreal-environment</artifactId>
-			<version>3.5.4-SNAPSHOT</version>
+			<version>3.5.6</version>
 		</dependency>
 
 		<dependency>
