--- a/UT3Environment/pom.xml
+++ b/UT3Environment/pom.xml
@@ -57,7 +57,7 @@
 		<dependency>
 			<groupId>nl.tudelft.goal</groupId>
 			<artifactId>goal-base-unreal-environment</artifactId>
-			<version>3.5.5</version>
+			<version>3.5.6-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>pogamut-ut2004</artifactId>
