--- a/UT2004Environment/pom.xml
+++ b/UT2004Environment/pom.xml
@@ -47,7 +47,7 @@
 		<dependency>
 			<groupId>nl.tudelft.goal</groupId>
 			<artifactId>goal-base-unreal-environment</artifactId>
-			<version>3.5.6</version>
+			<version>3.5.7-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>nl.tudelft.goal</groupId>
