--- a/Installer/pom.xml
+++ b/Installer/pom.xml
@@ -6,7 +6,7 @@
 	<name>Unreal 3/2004 Environment Installer</name>
 	<groupId>nl.tudelft.goal</groupId>
 	<artifactId>goal-ut-environment-installer</artifactId>
-	<version>3.7.6</version>
+	<version>3.7.7-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<url>https://github.com/eishub/UT3</url>
 	<licenses>
@@ -91,7 +91,7 @@
 
 		<nl.tudelft.ii.svn>https://ii.tudelft.nl/svn</nl.tudelft.ii.svn>
 		<gamebots.ut2004.svn>${nl.tudelft.ii.svn}/goal/UnrealEnvironment/v3/GameBotsUT2004</gamebots.ut2004.svn>
-		<gamebots.ut3.svn>svn://artemis.ms.mff.cuni.cz/pogamut/trunk/project/Main/Gamebots/GameBotsUT3/src/main/ut3/Release</gamebots.ut3.svn>
+		<gamebots.ut3>https://github.com/pevers/GameBotsUT3/releases/download/v0.1-alpha/GameBotsUT3.u</gamebots.ut3>
 	</properties>
 
 
@@ -151,25 +151,11 @@
 			</plugin>
 
 
-			<!-- Download Gamebots from SVN ! -->
+			<!-- Download Gamebots 2004 from SVN ! -->
 			<plugin>
 				<artifactId>maven-scm-plugin</artifactId>
 				<version>1.5</version>
 				<executions>
-					<execution>
-						<id>svn-gamebots-ut3-staging</id>
-						<phase>process-resources</phase>
-						<goals>
-							<goal>checkout</goal>
-						</goals>
-						<configuration>
-							<skipCheckoutIfExists>false</skipCheckoutIfExists>
-							<connectionUrl>
-								scm:svn:${gamebots.ut3.svn}
-							</connectionUrl>
-							<checkoutDirectory>${staging.dir}/GameBotsUT3</checkoutDirectory>
-						</configuration>
-					</execution>
 					<execution>
 						<id>svn-gamebots-ut2004-staging</id>
 						<phase>process-resources</phase>
@@ -182,6 +168,28 @@
 								scm:svn:${gamebots.ut2004.svn}
 							</connectionUrl>
 							<checkoutDirectory>${staging.dir}/GameBotsUT2004</checkoutDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- Download GameBots UT3 compiled version from Peter's git project. -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>download-ut3-gamebots</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<tasks>
+								<mkdir dir="${staging.dir}/GameBotsUT3/UTGame/CookedPC/" />
+								<get src="${gamebots.ut3}" dest="${staging.dir}/GameBotsUT3/UTGame/CookedPC/GameBotsUT3.u"
+									verbose="false" usetimestamp="true" />
+							</tasks>
 						</configuration>
 					</execution>
 				</executions>
@@ -275,7 +283,7 @@
 									<overWrite>true</overWrite> <outputDirectory>${staging.dir}/ut3environment</outputDirectory> 
 									<destFileName>${environment3.artifactId}-${environment.version}.jar</destFileName> 
 									</artifactItem> -->
-									
+
 								<!-- ut3env but without the version, for inclusion with the example 
 									#3497 -->
 
