#3867 preparing for release. Checked version numbers, some changed files had no SNAPSHOT pom

--- a/Installer/pom.xml
+++ b/Installer/pom.xml
@@ -54,12 +54,12 @@
 		<!-- Information for UT2004 environment to include in installer -->
 		<environment.groupId>${project.groupId}</environment.groupId>
 		<environment.artifactId>goal-ut2004-environment</environment.artifactId>
-		<environment.version>3.5.7</environment.version>
+		<environment.version>3.5.8-SNAPSHOT</environment.version>
 		<environment.classifier>eis_environment</environment.classifier>
 
 		<environment3.groupId>${project.groupId}</environment3.groupId>
 		<environment3.artifactId>goal-ut3-environment</environment3.artifactId>
-		<environment3.version>3.5.7</environment3.version>
+		<environment3.version>3.5.8-SNAPSHOT</environment3.version>
 		<environment3.classifier>eis_environment</environment3.classifier>
 
 		<!-- Information for visualizer to include in installer -->
@@ -71,7 +71,7 @@
 		<!-- Information for documentation to include in installer -->
 		<documentation.groupId>${project.groupId}</documentation.groupId>
 		<documentation.artifactId>goal-ut-environment-documentation</documentation.artifactId>
-		<documentation.version>3.5.7</documentation.version>
+		<documentation.version>3.5.8=SNAPSHOT</documentation.version>
 		<documentation.classifier>bin</documentation.classifier>
 
 		<!-- Information for examples to include in installer -->
