--- a/UTVisualizer/pom.xml
+++ b/UTVisualizer/pom.xml
@@ -7,7 +7,7 @@
 	<artifactId>goal-unreal-visualizer</artifactId>
 	<name>UTVisualizer</name>
 	<description>A visualizer for Unreal Tournament.</description>
-	<version>3.5.6</version>
+	<version>3.5.7-SNAPSHOT</version>
 	<url>https://github.com/eishub/UT3</url>
 	<licenses>
 		<license>
