--- a/UT3Environment/pom.xml
+++ b/UT3Environment/pom.xml
@@ -97,7 +97,7 @@
 		<dependency>
 			<groupId>nl.tudelft.goal</groupId>
 			<artifactId>goal-unreal-visualizer</artifactId>
-			<version>3.5.6</version>
+			<version>3.5.7-SNAPSHOT</version>
 			<scope>test</scope>
 			<exclusions>
 				<exclusion>
