--- a/UTVisualizerDependencies/pom.xml
+++ b/UTVisualizerDependencies/pom.xml
@@ -45,7 +45,7 @@
 		<dependency>
 			<groupId>nl.tudelft.goal</groupId>
 			<artifactId>goal-unreal-visualizer</artifactId>
-			<version>3.5.6</version>
+			<version>3.5.7-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
