#3856 rename UT manual to UT3 Environment Manual.

--- a/UT2004EnvironmentManual/src/main/resources/.gitignore
+++ b/UT2004EnvironmentManual/src/main/resources/.gitignore
@@ -5,3 +5,6 @@
 /UT Environment Manual.synctex.gz
 /UT Environment Manual.aux
 /UT Environment Manual.log
+/UT3 Environment Manual.aux
+/UT3 Environment Manual.log
+/UT3 Environment Manual.synctex.gz
