--- a/Installer/pom.xml
+++ b/Installer/pom.xml
@@ -51,6 +51,8 @@
 	</scm>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
 		<!-- Information for UT2004 environment to include in installer -->
 		<environment.groupId>${project.groupId}</environment.groupId>
 		<environment.artifactId>goal-ut2004-environment</environment.artifactId>
@@ -77,7 +79,7 @@
 		<!-- Information for examples to include in installer -->
 		<examples.groupId>${project.groupId}</examples.groupId>
 		<examples.artifactId>goal-ut-environment-examples</examples.artifactId>
-		<examples.version>3.5.8</examples.version>
+		<examples.version>3.5.9</examples.version>
 		<examples.classifier>bin</examples.classifier>
 
 		<!-- Information used by the installer -->
@@ -93,8 +95,6 @@
 		<gamebots.ut2004.svn>${nl.tudelft.ii.svn}/goal/UnrealEnvironment/v3/GameBotsUT2004</gamebots.ut2004.svn>
 		<gamebots.ut3>https://github.com/pevers/GameBotsUT3/releases/download/v0.1-alpha/GameBotsUT3.u</gamebots.ut3>
 	</properties>
-
-
 
 	<!-- Disabled dependencies. When active IzPack looks for Saxon Dom writer. -->
 	<!-- <dependencies> <dependency> <groupId>${visualizer.groupId}</groupId> 
@@ -187,7 +187,8 @@
 						<configuration>
 							<tasks>
 								<mkdir dir="${staging.dir}/GameBotsUT3/UTGame/CookedPC/" />
-								<get src="${gamebots.ut3}" dest="${staging.dir}/GameBotsUT3/UTGame/CookedPC/GameBotsUT3.u"
+								<get src="${gamebots.ut3}"
+									dest="${staging.dir}/GameBotsUT3/UTGame/CookedPC/GameBotsUT3.u"
 									verbose="false" usetimestamp="true" />
 							</tasks>
 						</configuration>
