Stop java8 doc lint-ing and fixes to get build system working again

--- a/UT3Environment/pom.xml
+++ b/UT3Environment/pom.xml
@@ -48,6 +48,18 @@
 		<url>https://github.com:eishub/UT3</url>
 	</scm>
 
+	<profiles>
+		<profile>
+			<id>java8-doclint-disabled</id>
+			<activation>
+				<jdk>[1.8,)</jdk>
+			</activation>
+			<properties>
+				<javadoc.opts>-Xdoclint:none</javadoc.opts>
+			</properties>
+		</profile>
+	</profiles>
+
 	<dependencies>
 		<dependency>
 			<groupId>cz.cuni.amis.pogamut</groupId>
@@ -172,6 +184,9 @@
 						<goals>
 							<goal>jar</goal>
 						</goals>
+						<configuration>
+							<additionalparam>${javadoc.opts}</additionalparam>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
