--- a/UTVisualizerFrame/pom.xml
+++ b/UTVisualizerFrame/pom.xml
@@ -50,6 +50,18 @@
 		<url>https://github.com:eishub/UT3</url>
 	</scm>
 
+	<profiles>
+		<profile>
+			<id>java8-doclint-disabled</id>
+			<activation>
+				<jdk>[1.8,)</jdk>
+			</activation>
+			<properties>
+				<javadoc.opts>-Xdoclint:none</javadoc.opts>
+			</properties>
+		</profile>
+	</profiles>
+
 	<dependencies>
 		<dependency>
 			<groupId>cz.cuni.amis.pogamut</groupId>
@@ -111,6 +123,10 @@
 						<goals>
 							<goal>jar</goal>
 						</goals>
+						<configuration>
+							<additionalparam>${javadoc.opts}</additionalparam>
+						</configuration>
+
 					</execution>
 				</executions>
 			</plugin>
