--- a/UTVisualizer/pom.xml
+++ b/UTVisualizer/pom.xml
@@ -52,6 +52,18 @@
 	<!-- <properties> <skipTests>false</skipTests> <maven.javadoc.skip>true</maven.javadoc.skip> 
 		</properties> -->
 
+	<profiles>
+		<profile>
+			<id>java8-doclint-disabled</id>
+			<activation>
+				<jdk>[1.8,)</jdk>
+			</activation>
+			<properties>
+				<javadoc.opts>-Xdoclint:none</javadoc.opts>
+			</properties>
+		</profile>
+	</profiles>
+
 	<dependencies>
 		<dependency>
 			<groupId>nl.tudelft.goal</groupId>
@@ -104,6 +116,9 @@
 						<goals>
 							<goal>jar</goal>
 						</goals>
+						<configuration>
+							<additionalparam>${javadoc.opts}</additionalparam>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
