--- a/BaseUnrealEnvironment/pom.xml
+++ b/BaseUnrealEnvironment/pom.xml
@@ -72,7 +72,7 @@
 		<dependency>
 			<groupId>eishub</groupId>
 			<artifactId>eis</artifactId>
-			<version>0.5.0</version>
+			<version>0.6.0-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
