--- a/UTVisualizerConnection/pom.xml
+++ b/UTVisualizerConnection/pom.xml
@@ -75,7 +75,7 @@
 		<dependency>
 			<groupId>eishub</groupId>
 			<artifactId>eis</artifactId>
-			<version>0.5.0</version>
+			<version>0.6.0-SNAPSHOT</version>
 		</dependency>
 
 
