--- a/UT2004ServerConnection/pom.xml
+++ b/UT2004ServerConnection/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>goal-unreal-server-connection</artifactId>
 	<name>UTServerConnection</name>
 	<description>Provides a connection to the UT server. </description>
-	<version>3.5.6</version>
+	<version>3.6.0-SNAPSHOT</version>
 
 	<url>https://github.com/eishub/UT3</url>
 
