--- a/UT3Environment/pom.xml
+++ b/UT3Environment/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>nl.tudelft.goal</groupId>
 	<artifactId>goal-ut3-environment</artifactId>
 	<name>goal-ut3-environment</name>
-	<version>3.5.8</version>
+	<version>3.6.0-SNAPSHOT</version>
 	<url>https://github.com/eishub/UT3</url>
 
 	<properties>
@@ -75,7 +75,7 @@
 		<dependency>
 			<groupId>nl.tudelft.goal</groupId>
 			<artifactId>goal-base-unreal-environment</artifactId>
-			<version>3.5.7</version>
+			<version>3.6.0-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>pogamut-ut2004</artifactId>
@@ -86,7 +86,7 @@
 		<dependency>
 			<groupId>nl.tudelft.goal</groupId>
 			<artifactId>goal-ut2004-environment-util</artifactId>
-			<version>3.5.6</version>
+			<version>3.6.0-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>pogamut-ut2004</artifactId>
@@ -115,7 +115,7 @@
 		<dependency>
 			<groupId>nl.tudelft.goal</groupId>
 			<artifactId>goal-unreal-visualizer</artifactId>
-			<version>3.5.7</version>
+			<version>3.6.0-SNAPSHOT</version>
 			<scope>test</scope>
 			<exclusions>
 				<exclusion>
@@ -127,7 +127,7 @@
 		<dependency>
 			<groupId>nl.tudelft.goal</groupId>
 			<artifactId>goal-ut-visualizer-connection</artifactId>
-			<version>3.5.6</version>
+			<version>3.6.0-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>pogamut-ut2004</artifactId>
@@ -139,13 +139,11 @@
 			<groupId>cz.cuni.amis.pogamut</groupId>
 			<artifactId>pogamut-unreal</artifactId>
 			<version>3.5.4-SNAPSHOT</version>
-			<type>jar</type>
 		</dependency>
 		<dependency>
 			<groupId>cz.cuni.amis.pogamut</groupId>
 			<artifactId>pogamut-ut2004</artifactId>
 			<version>3.5.4-ut3-development-SNAPSHOT</version>
-			<type>jar</type>
 		</dependency>
 	</dependencies>
 
