--- a/UTVisualizer/pom.xml
+++ b/UTVisualizer/pom.xml
@@ -7,7 +7,7 @@
 	<artifactId>goal-unreal-visualizer</artifactId>
 	<name>UTVisualizer</name>
 	<description>A visualizer for Unreal Tournament.</description>
-	<version>3.5.7</version>
+	<version>3.6.0-SNAPSHOT</version>
 	<url>https://github.com/eishub/UT3</url>
 
 	<properties>
@@ -68,12 +68,12 @@
 		<dependency>
 			<groupId>nl.tudelft.goal</groupId>
 			<artifactId>goal-unreal-visualizer-frame</artifactId>
-			<version>3.5.6</version>
+			<version>3.6.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>nl.tudelft.goal</groupId>
 			<artifactId>goal-ut-visualizer-connection</artifactId>
-			<version>3.5.6</version>
+			<version>3.6.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>cz.cuni.amis.pogamut</groupId>
