--- a/UTVisualizerConnection/pom.xml
+++ b/UTVisualizerConnection/pom.xml
@@ -8,7 +8,7 @@
 	<artifactId>goal-ut-visualizer-connection</artifactId>
 	<name>UTVisualizerConnection</name>
 	<description>A connection for the Visualizer to the Unreal Environment.</description>
-	<version>3.5.6</version>
+	<version>3.6.0-SNAPSHOT</version>
 	<url>https://github.com/eishub/UT3</url>
 
 	<properties>
@@ -65,7 +65,7 @@
 		<dependency>
 			<groupId>nl.tudelft.goal</groupId>
 			<artifactId>goal-ut2004-environment-util</artifactId>
-			<version>3.5.6</version>
+			<version>3.6.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>cz.cuni.amis.pogamut</groupId>
