--- a/UTVisualizerFrame/pom.xml
+++ b/UTVisualizerFrame/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>nl.tudelft.goal</groupId>
 	<artifactId>goal-unreal-visualizer-frame</artifactId>
 	<name>UTVisualizerFrame</name>
-	<version>3.5.6</version>
+	<version>3.6.0-SNAPSHOT</version>
 
 	<description>An OpenGL frame to visualize Unreal Tournament.</description>
 	<url>https://github.com/eishub/UT3</url>
@@ -72,7 +72,7 @@
 		<dependency>
 			<groupId>nl.tudelft.pogamut</groupId>
 			<artifactId>goal-unreal-server-connection</artifactId>
-			<version>3.5.6</version>
+			<version>3.6.0-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
