--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<groupId>nl.tudelft.goal</groupId>
 	<artifactId>ut-goal-environment</artifactId>
 	<name>goal-ut-environment</name>
-	<version>3.5.7</version>
+	<version>3.6.0-SNAPSHOT</version>
 	<url>https://github.com/eishub/UT3</url>
 	<packaging>pom</packaging>
 	<licenses>
