--- a/BaseUnrealEnvironment/pom.xml
+++ b/BaseUnrealEnvironment/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>nl.tudelft.goal</groupId>
 	<artifactId>goal-base-unreal-environment</artifactId>
-	<version>3.6.0-SNAPSHOT</version>
+	<version>3.6.0</version>
 	<name>goal-base-unreal-environment</name>
 	<description>Base environment for Unreal Tournament</description>
 	<url>https://github.com/eishub/UT3</url>
@@ -67,12 +67,12 @@
 		<dependency>
 			<groupId>nl.tudelft.goal</groupId>
 			<artifactId>goal-ut2004-environment-util</artifactId>
-			<version>3.6.0-SNAPSHOT</version>
+			<version>3.6.0</version>
 		</dependency>
 		<dependency>
 			<groupId>eishub</groupId>
 			<artifactId>eis</artifactId>
-			<version>0.6.0-SNAPSHOT</version>
+			<version>0.6.0</version>
 		</dependency>
 
 		<dependency>
@@ -84,7 +84,7 @@
 		<dependency>
 			<groupId>nl.tudelft.pogamut</groupId>
 			<artifactId>goal-unreal-server-connection</artifactId>
-			<version>3.6.0-SNAPSHOT</version>
+			<version>3.6.0</version>
 		</dependency>
 	</dependencies>
 
