--- a/EmohawkEnvironment/pom.xml
+++ b/EmohawkEnvironment/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>nl.tudelft.goal</groupId>
 	<artifactId>goal-emohawk-environment</artifactId>
 	<name>goal-emohawk-environment</name>
-	<version>3.6.0-SNAPSHOT</version>
+	<version>3.6.0</version>
 	<url>https://github.com/eishub/UT3</url>
 	<licenses>
 		<license>
@@ -47,7 +47,7 @@
 		<dependency>
 			<groupId>nl.tudelft.goal</groupId>
 			<artifactId>goal-base-unreal-environment</artifactId>
-			<version>3.6.0-SNAPSHOT</version>
+			<version></version>
 		</dependency>
 
 		<dependency>
@@ -59,7 +59,7 @@
 		<dependency>
 			<groupId>eishub</groupId>
 			<artifactId>eis</artifactId>
-			<version>0.6.0-SNAPSHOT</version>
+			<version>0.6.0</version>
 		</dependency>
 
 
